manifest-develop/allow-webapp-from-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webapp-from-ingress
  namespace: esprit-portail-entreprise-dev
spec:
  podSelector:
    matchLabels:
      portail-entreprise.service: webapp
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: portail-entreprise
          portail-entreprise.service: api-gateway
    ports:
    - protocol: TCP
      port: 8222
